--- a/MyGallery/MyGallery.html
+++ b/MyGallery/MyGallery.html
@@ -7,103 +7,83 @@
     Alyona Kholmogorova with exclusive paintings">
     <title>Exhibition by Alyona</title>
     <link href="outlines.css" rel="stylesheet" >
+
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Kanit:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
 </head>
-<body>
-    <header>
-        <h1>Personal Exhibition</h1>
-        <nav>
-            <ol type="I">
-                <li><a href="#MyPaintings">my paintings</a></li>
-                <li><a href="#AboutMe">about me</a></li>
-                <li><a href="#Contacts">contacts</a></li>
+<body class="body">
+    <header class="header">
+        <nav class="menu">
+            <ol class="menu__list">
+                <li class="menu__item"><a href="#MyPaintings" class="menu__link">My paintings</a></li>
+                <li class="menu__item"><a href="#AboutMe" class="menu__link">About me</a></li>
+                <li class="menu__item menu__item__position-left"><a href="#Contacts" class="menu__link">Contacts</a></li>
             </ol>
         </nav>
+        <h1 class="header__name-of-site">Personal Exhibition.</h1>
     </header>
-    <main>
-        <section id="MyPaintings">
-            <h2>My Paintings</h2>
-            <h3>Available soon...</h3>
+    <main class="main">
+        <section id="MyPaintings" class="my-paintings my-paintings__image">
+            <h2 class="my-paintings__header my-paintings__header__location">My Paintings.</h2>
+            <img src="images/reeds.png" alt="First painting" class="my-paintings__painting-item"/>
+            <img src="images/bridge.png" alt="Second painting" class="my-paintings__painting-item"/>
+            <img src="images/flowers.png" alt="Third painting" class="my-paintings__painting-item"/>
+            <img src="images/flowers2.png" alt="Fourth painting" class="my-paintings__painting-item"/>
+            <img src="images/boxes.png" alt="Fifth painting" class="my-paintings__painting-item"/>
+            <img src="images/ovals.png" alt="Sixth painting" class="my-paintings__painting-item"/>
         </section>
 
-        <section id="AboutMe">
-            <h2>About me</h2>
-            <p>I study at ITMO University in Saint-Petersburg and learn programming.</p>
-            <p>My hobby is painting and making art-objects with my hands.</p>
+        <section id="AboutMe" class="about-me">
+            <h2 class="about-me__header">About me.</h2>
+            <div class="about-me__content about-me__content__center">I study at ITMO University in Saint-Petersburg and learn programming.
+                My hobby is painting and making art-objects with my hands.</div>
+            <img src="images/alyonaseats.png" alt="Alyona seats" class="about-me__image"/>
         </section>
 
         <article>
-            <div>
-            <h2>My favourite artists</h2>
-            <h3>Claude Monet</h3>
-                <p><i>Oscar-Claude Monet</i> was a French painter and founder of
+            <h2 class="my-favourite-artists__header">My favourite artists</h2>
+            <div class="artist-item">
+            <h3 class="artist-item__author-name">Claude Monet</h3>
+                <p class="artist-item__content"><i>Oscar-Claude Monet</i> was a French painter and founder of
                 impressionism painting who is seen as a key precursor
                 to modernism, especially in his attempts to paint nature
                 as he perceived it.</p>
-            <h3>Pablo Picasso</h3>
-                <p><i>Pablo Ruiz Picasso</i> was a Spanish painter, sculptor,
+            </div>
+            <div class="artist-item">
+            <h3 class="artist-item__author-name">Pablo Picasso</h3>
+                <p class="artist-item__content"><i>Pablo Ruiz Picasso</i> was a Spanish painter, sculptor,
                 printmaker, ceramicist, and theatre designer who spent
                 most of his adult life in France. One of the most
                 influential artists of the 20th century, he is known for
                 co-founding the Cubist movement, the invention of constructed
                 sculpture, the co-invention of collage, and for the
                 wide variety of styles that he helped develop and explore. </p>
-            <h3>Wassily Kandinsky</h3>
-                <p><i>Wassily Wassilyevich Kandinsky</i> was a Russian painter and art
+            </div>
+            <div class="artist-item">
+            <h3 class="artist-item__author-name">Wassily Kandinsky</h3>
+                <p class="artist-item__content"><i>Wassily Wassilyevich Kandinsky</i> was a Russian painter and art
                 theorist. Kandinsky is generally credited as one of the pioneers
                 of abstraction in western art. Kandinsky began painting studies
                 (life-drawing, sketching and anatomy) at the age of 30.</p>
             </div>
         </article>
 
-        <section>
-            <h2>Just a snippet of code</h2>
-            <pre>
-                <code>
-                    #include &ltiostream&gt
-                    int main() {
-                        std::cout << "It is just snippet for my labwork";
-                        return 0;
-                    }
-                </code>
-            </pre>
-        </section>
-
-        <section id="Thanks">
-            <h2>Thanks for watching!</h2>
-            <pre>
-                \`*-.
-                 )  _`-.
-                .  : `. .
-                : _   '  \
-                ; *` _.   `*-._
-                `-.-'          `-.
-                  ;       `       `.
-                  :.       .        \
-                  . \  .   :   .-'   .
-                  '  `+.;  ;  '      :
-                  :  '  |    ;       ;-.
-                  ; '   : :`-:     _.`* ;
-          <b>BYE!</b> .*' /  .*' ; .*`- +'  `*'
-               `*-*   `*-*  `*-*'
-            </pre>
-        </section>
-        <aside>
-            <h2>My smart thoughts</h2>
-            <p>... available soon (I haven't come up with anything yet)</p>
+        <aside class="zabeyki">
+            <h2 class="zabeyki__header">Zabeyki.</h2>
+            <img src="images/zabeyka1.png" alt="First zabeyka" class="my-paintings__painting-item"/>
+            <img src="images/zabeyka2.png" alt="Second zabeyka" class="my-paintings__painting-item"/>
+            <img src="images/zabeyka3.png" alt="Third painting" class="my-paintings__painting-item"/>
         </aside>
     </main>
-    <footer>
-        <h2>My favourite quote</h2>
-        <p><cite>Picasso says</cite> - <q>Art washes away from the soul the dust of everyday life.</q></p>
-        <h2>My formula for success</h2>
-        <p><b>work<sup>3</sup> + luck + 2 * (mental health)</b></p>
-
-        <section id="Contacts">
-        <h2>Contacts</h2>
+    <footer class="footer">
+        <section class="contacts" id="Contacts">
+        <h2 class="contacts__header">Contacts</h2>
         <ul>
-            <li><a href="https://t.me/imnotfromthiswrld">telegram</a></li>
-            <li>email: aaatttyyy@bk.ru</li>
+            <li class="contacts__link"><a href="https://t.me/imnotfromthiswrld">telegram</a></li>
+            <li class="contacts__link">email: aaatttyyy@bk.ru</li>
         </ul>
+            <img src="images/isixone.png" alt="Isixone" class="contacts__image"/>
         </section>
     </footer>
 </body>
