--- a/MyGallery/MyGallery.html
+++ b/MyGallery/MyGallery.html
@@ -7,7 +7,7 @@
     Alyona Kholmogorova with exclusive paintings">
     <title>Exhibition by Alyona</title>
     <link href="outlines.css" rel="stylesheet" >
-
+    <script src="index.js" defer></script>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Kanit:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
@@ -17,7 +17,7 @@
         <nav class="menu">
             <ol class="menu__list">
                 <li class="menu__item"><a href="#MyPaintings" class="menu__link">My paintings</a></li>
-                <li class="menu__item"><a href="#AboutMe" class="menu__link">About me</a></li>
+                <li class="menu__item"><a href="AboutMe.html" class="menu__link">About me</a></li>
                 <li class="menu__item menu__item__position-left"><a href="#Contacts" class="menu__link">Contacts</a></li>
             </ol>
         </nav>
