--- a/MyGallery/MyGallery.html
+++ b/MyGallery/MyGallery.html
@@ -18,6 +18,7 @@
             <ol class="menu__list">
                 <li class="menu__item"><a href="#MyPaintings" class="menu__link">My paintings</a></li>
                 <li class="menu__item"><a href="AboutMe.html" class="menu__link">About me</a></li>
+                <li class="menu__item"><a href="DeathNote.html" class="menu__link">Death note</a></li>
                 <li class="menu__item menu__item__position-left"><a href="#Contacts" class="menu__link">Contacts</a></li>
             </ol>
         </nav>
