--- a/MyGallery/AboutMe.html
+++ b/MyGallery/AboutMe.html
@@ -18,14 +18,15 @@
     <ol class="menu__list">
       <li class="menu__item"><a href="MyGallery.html" class="menu__link">My paintings</a></li>
       <li class="menu__item"><a href="AboutMe.html" class="menu__link">About me</a></li>
+      <li class="menu__item"><a href="DeathNote.html" class="menu__link">Death note</a></li>
       <li class="menu__item menu__item__position-left"><a href="#Contacts" class="menu__link">Contacts</a></li>
     </ol>
   </nav>
-  <h1 class="header__name-of-site">Personal Exhibition.</h1>
+  <h1 class="header__name-of-site">About me.</h1>
 </header>
 <main class="main">
   <section id="AboutMe" class="about-me">
-    <h2 class="about-me__header">About me.</h2>
+<!--    <h2 class="about-me__header">About me.</h2>-->
     <div class="about-me__content">
       <img src="images/alyonaseats.png" alt="Alyona seats" class="about-me__image"/>
       <div class="about-me__right-part">
