--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Loading...</title>
-  <script src="Loader.js"></script>
+  <script src="js/Loader.js"></script>
   <link href="loader.css" rel="stylesheet" >
 </head>
 <body>
